<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingVertical="16dp"
    android:paddingHorizontal="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="24sp"
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black" />
    <TextView
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:text="@string/notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black" />
    <TextView
        android:textSize="12sp"
        android:text="@string/notif_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:padding="8dp"
        android:text="@string/manage"
        android:layout_marginTop="8dp"
        android:id="@+id/manageNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:drawableEnd="@drawable/ic_open_in_new"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

</LinearLayout>
